using a valid id token, created config package with configuration class alongside a bean method, fixes Firebase name [DEFAULT] already exists error.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 **/.DS_Store
 src/main/resources/backend-winter-23.json
 spring-backend/src/main/resources/backend-winter-23.json
+target/classes/backend-winter-23.json
